home done and about done

--- a/html/index.html
+++ b/html/index.html
@@ -18,11 +18,11 @@
               <a class="navbar-brand" href="#">
                 <img src="../images/Logo.png" alt="Logo" loading="lazy" class="Logo">
                 <div>
-                    <a href="#Home" class="nav-links">HOME</a>
-                    <a href="#About"class="nav-links">ABOUT</a>
-                    <a href="#Project"class="nav-links">PROJECT</a>
-                    <a href="#Testimonial"class="nav-links">TESTIMONIAL</a>
-                    <a href="#Contact"class="nav-links">CONTACT</a>
+                  <a href="../html/index.html" class="nav-links">HOME</a>
+                  <a href="../html/about.html"class="nav-links">ABOUT</a>
+                  <a href="../html/project.html"class="nav-links">PROJECT</a>
+                  <a href="../html/testimonial.html"class="nav-links">TESTIMONIAL</a>
+                  <a href="../html/contact.html"class="nav-links">CONTACT</a>
                 </div>
               </a>
             </div>
@@ -44,6 +44,10 @@
                             <div><h4>HELLO THERE, I'M</h4></div>
                             <div><h1>KEENO FOURIE</h1></div>
                             <div><h6>-AN ASPIRING FULL STACK WEB DEVELOPER-</h6></div>
+                            <div>
+                              <a href="../html/contact.html"><button type="button" class="btn btn-outline-dark">Contact Me</button></a>
+                              <a href="../html/about.html"><button type="button" class="btn btn-outline-dark">More About Me</button></a>
+                            </div>
                         </div>
                         </div>
                       </div>
@@ -51,9 +55,6 @@
                   </div>
                 </div>
               </div>
-        </div>
-        <div>
-            
         </div>
     </main>
 
