--- a/html/contact.html
+++ b/html/contact.html
@@ -1,22 +1,64 @@
-
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-  </button>
-  
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>Bootstrap Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <nav class="navbar bg-black">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="../images/Logo.png" alt="Logo" loading="lazy" class="Logo">
+                <div>
+                    <a href="../html/index.html" class="nav-links">HOME</a>
+                    <a href="../html/about.html"class="nav-links">ABOUT</a>
+                    <a href="../html/project.html"class="nav-links">PROJECT</a>
+                    <a href="../html/testimonial.html"class="nav-links">TESTIMONIAL</a>
+                    <a href="../html/contact.html"class="nav-links">CONTACT</a>
+                </div>
+              </a>
+            </div>
+          </nav>
+    </header>
+    
+    <form class="position-absolute top-50 start-50 translate-middle">
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Name:</label>
+        <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
       </div>
-    </div>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Surname:</label>
+        <input type="surname" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Surname">
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email Address:</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com">
+        <div id="emailHelp" class="form-text">*We'll never share your email with anyone else.*</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Comment:</label>
+        <input type="comment" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Type your message here...">
+      </div>
+      <button type="submit" class="btn btn-secondary">Submit</button>
+    </form>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+</body>
+<footer class="foot">
+  <a href="https://www.instagram.com/kinzboy10/?hl=en"><img src="../images/instagram.png" alt="icons" loading="lazy" class="image-icon"></a>
+  <a href="https://www.facebook.com/profile.php?id=100085347340027"><img src="../images/facebook.png" alt="icons" loading="lazy" class="image-icon"></a>
+  <a href="https://github.com/KeenoFourie"><img src="../images/github.webp" alt="icons" loading="lazy" class="image-icon"></a>
+  <div class="copyright">
+    <p>COPYRIGHT &COPY; 2023</p>
   </div>
+</footer>
+
+</html>
