--- a/html/project.html
+++ b/html/project.html
@@ -29,7 +29,7 @@
           </nav>
     </header>
     
-    <br><br>
+    <br><br><br><br>
 
     <div class="project-slideshow">
       <div id="carouselExampleCaptions" class="carousel slide">
@@ -40,31 +40,31 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../images/Calendar.png" class="d-block w-50 mx-auto" alt="calendar-project" loading="lazy">
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: black;">Project 1:</h5>
+              <a href="https://resplendent-cactus-87b369.netlify.app/"><button type="button" class="btn btn-outline-light">Project 1:</button></a>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../images/Website.png" class="d-block w-50 mx-auto" alt="website-project" loading="lazy">
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: black;">Project 2:</h5>
+              <a href="https://unique-druid-383b37.netlify.app/"><button type="button" class="btn btn-outline-light">Project 2:</button></a>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../images/website-2.png" class="d-block w-50 mx-auto" alt="website-2-project" loading="lazy">
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: black;">Project 3:</h5>
+              <a href="https://jolly-naiad-6918b4.netlify.app/"><button type="button" class="btn btn-outline-light">Project 3:</button></a>
             </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span style="color: white;">Previous</span>
+          <span style="color: white;"></span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span style="color: black;">Next</span>
+          <span style="color: white;"></span>
         </button>
       </div>
 
