--- a/html/contact.html
+++ b/html/contact.html
@@ -29,23 +29,23 @@
           </nav>
     </header>
     
-    <form class="position-absolute top-50 start-50 translate-middle">
+    <form class="position-absolute top-50 start-50 translate-middle" action="https://formspree.io/f/mdovjoav" method="POST">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Name:</label>
-        <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+        <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name" required>
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Surname:</label>
-        <input type="surname" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Surname">
+        <input type="surname" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Surname" required>
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email Address:</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com" required>
         <div id="emailHelp" class="form-text">*We'll never share your email with anyone else.*</div>
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Comment:</label>
-        <input type="comment" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Type your message here...">
+        <input type="comment" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Type your message here..." required>
       </div>
       <button type="submit" class="btn btn-secondary">Submit</button>
     </form>
