--- a/html/project.html
+++ b/html/project.html
@@ -37,24 +37,31 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <img src="../images/My Projects.png" class="d-block w-50 mx-auto" alt="calendar-project" loading="lazy">
+          </div>
+          <div class="carousel-item">
             <img src="../images/Calendar.png" class="d-block w-50 mx-auto" alt="calendar-project" loading="lazy">
             <div class="carousel-caption d-none d-md-block">
-              <a href="https://resplendent-cactus-87b369.netlify.app/"><button type="button" class="btn btn-outline-light">Project 1:</button></a>
+              <a href="https://resplendent-cactus-87b369.netlify.app/"><button type="button" class="btn btn-outline-light">Netlify</button></a>
+              <a href="https://github.com/KeenoFourie/calendar.git"><button type="button" class="btn btn-outline-light">Github</button></a>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../images/Website.png" class="d-block w-50 mx-auto" alt="website-project" loading="lazy">
             <div class="carousel-caption d-none d-md-block">
-              <a href="https://unique-druid-383b37.netlify.app/"><button type="button" class="btn btn-outline-light">Project 2:</button></a>
+              <a href="https://unique-druid-383b37.netlify.app/"><button type="button" class="btn btn-outline-light">Netlify</button></a>
+              <a href="https://github.com/KeenoFourie/portfolio2004.git"><button type="button" class="btn btn-outline-light">Github</button></a>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../images/website-2.png" class="d-block w-50 mx-auto" alt="website-2-project" loading="lazy">
             <div class="carousel-caption d-none d-md-block">
-              <a href="https://jolly-naiad-6918b4.netlify.app/"><button type="button" class="btn btn-outline-light">Project 3:</button></a>
+              <a href="https://jolly-naiad-6918b4.netlify.app/"><button type="button" class="btn btn-outline-light">Netlify</button></a>
+              <a href="https://github.com/KeenoFourie/My-Website.git"><button type="button" class="btn btn-outline-light">Github</button></a>
             </div>
           </div>
         </div>
