--- a/html/contact.html
+++ b/html/contact.html
@@ -12,53 +12,64 @@
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
 </head>
 <body>
+</head>
+<body>
     <header>
         <nav class="navbar bg-black">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <img src="../images/Logo.png" alt="Logo" loading="lazy" class="Logo">
-                <div>
-                    <a href="../html/index.html" class="nav-links">HOME</a>
-                    <a href="../html/about.html"class="nav-links">ABOUT</a>
-                    <a href="../html/project.html"class="nav-links">PROJECT</a>
-                    <a href="../html/testimonial.html"class="nav-links">TESTIMONIAL</a>
-                    <a href="../html/contact.html"class="nav-links">CONTACT</a>
+                <div class="navigation-bar">
+                  <a href="../html/index.html" class="nav-links">HOME</a>
+                  <a href="../html/about.html"class="nav-links">ABOUT</a>
+                  <a href="../html/project.html"class="nav-links">PROJECT</a>
+                  <a href="../html/testimonial.html"class="nav-links">TESTIMONIAL</a>
+                  <a href="../html/contact.html"class="nav-links">CONTACT</a>
                 </div>
+              </div>
               </a>
             </div>
           </nav>
     </header>
     
-    <form class="position-absolute top-50 start-50 translate-middle" action="https://formspree.io/f/mdovjoav" method="POST">
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Name:</label>
-        <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name" required>
+    <div class="formation">
+      <form action="https://formspree.io/f/mdovjoav" method="POST">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Name:</label>
+          <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name" required>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Surname:</label>
+          <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Surname" required>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email Address:</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com" required>
+          <div id="emailHelp" class="form-text">*We'll never share your email with anyone else.*</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Comment:</label>
+          <input name="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Type your message here..." required>
+        </div>
+        <button type="submit" class="btn btn-secondary">Submit</button>
+      </form>
+    </div>
+
+    <footer class="foot project-foot">
+      <div class="iconic">
+        <a href="https://www.instagram.com/kinzboy10/?hl=en" target="_blank"><img src="../images/instagram.png" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://www.facebook.com/profile.php?id=100085347340027" target="_blank"><img src="../images/facebook.png" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://github.com/KeenoFourie" target="_blank"><img src="../images/github.webp" alt="icons" loading="lazy" class="image-icon"></a>
       </div>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Surname:</label>
-        <input type="surname" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Surname" required>
+      <div class="copyright">
+        <p>COPYRIGHT &COPY; 2023</p>
       </div>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email Address:</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com" required>
-        <div id="emailHelp" class="form-text">*We'll never share your email with anyone else.*</div>
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Comment:</label>
-        <input type="comment" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Type your message here..." required>
-      </div>
-      <button type="submit" class="btn btn-secondary">Submit</button>
-    </form>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
-<footer class="foot">
-  <a href="https://www.instagram.com/kinzboy10/?hl=en"><img src="../images/instagram.png" alt="icons" loading="lazy" class="image-icon"></a>
-  <a href="https://www.facebook.com/profile.php?id=100085347340027"><img src="../images/facebook.png" alt="icons" loading="lazy" class="image-icon"></a>
-  <a href="https://github.com/KeenoFourie"><img src="../images/github.webp" alt="icons" loading="lazy" class="image-icon"></a>
-  <div class="copyright">
-    <p>COPYRIGHT &COPY; 2023</p>
-  </div>
-</footer>
-
 </html>
