--- a/html/project.html
+++ b/html/project.html
@@ -12,18 +12,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
 </head>
 <body>
+</head>
+<body>
     <header>
         <nav class="navbar bg-black">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <img src="../images/Logo.png" alt="Logo" loading="lazy" class="Logo">
-                <div>
-                    <a href="../html/index.html" class="nav-links">HOME</a>
-                    <a href="../html/about.html"class="nav-links">ABOUT</a>
-                    <a href="../html/project.html"class="nav-links">PROJECT</a>
-                    <a href="../html/testimonial.html"class="nav-links">TESTIMONIAL</a>
-                    <a href="../html/contact.html"class="nav-links">CONTACT</a>
+                <div class="navigation-bar">
+                  <a href="../html/index.html" class="nav-links">HOME</a>
+                  <a href="../html/about.html"class="nav-links">ABOUT</a>
+                  <a href="../html/project.html"class="nav-links">PROJECT</a>
+                  <a href="../html/testimonial.html"class="nav-links">TESTIMONIAL</a>
+                  <a href="../html/contact.html"class="nav-links">CONTACT</a>
                 </div>
+              </div>
               </a>
             </div>
           </nav>
@@ -41,27 +48,27 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../images/My Projects.png" class="d-block w-50 mx-auto" alt="calendar-project" loading="lazy">
+            <img src="../images/My Projects.png" class="d-block w-50 mx-auto h-auto" alt="calendar-project" loading="lazy">
           </div>
           <div class="carousel-item">
-            <img src="../images/Calendar.png" class="d-block w-50 mx-auto" alt="calendar-project" loading="lazy">
-            <div class="carousel-caption d-none d-md-block">
-              <a href="https://resplendent-cactus-87b369.netlify.app/"><button type="button" class="btn btn-outline-light">Netlify</button></a>
-              <a href="https://github.com/KeenoFourie/calendar.git"><button type="button" class="btn btn-outline-light">Github</button></a>
+            <img src="../images/Calendar.png" class="d-block w-50 mx-auto h-auto" alt="calendar-project" loading="lazy">
+            <div class="carousel-caption d-md-block">
+              <a href="https://resplendent-cactus-87b369.netlify.app/" target="_blank"><button type="button" class="btn btn-outline-light">Netlify</button></a>
+              <a href="https://github.com/KeenoFourie/calendar.git" target="_blank"><button type="button" class="btn btn-outline-light">Github</button></a>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../images/Website.png" class="d-block w-50 mx-auto" alt="website-project" loading="lazy">
-            <div class="carousel-caption d-none d-md-block">
-              <a href="https://unique-druid-383b37.netlify.app/"><button type="button" class="btn btn-outline-light">Netlify</button></a>
-              <a href="https://github.com/KeenoFourie/portfolio2004.git"><button type="button" class="btn btn-outline-light">Github</button></a>
+            <img src="../images/Website.png" class="d-block w-50 mx-auto h-auto" alt="website-project" loading="lazy">
+            <div class="carousel-caption d-md-block">
+              <a href="https://unique-druid-383b37.netlify.app/" target="_blank"><button type="button" class="btn btn-outline-light">Netlify</button></a>
+              <a href="https://github.com/KeenoFourie/portfolio2004.git" target="_blank"><button type="button" class="btn btn-outline-light">Github</button></a>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../images/website-2.png" class="d-block w-50 mx-auto" alt="website-2-project" loading="lazy">
-            <div class="carousel-caption d-none d-md-block">
-              <a href="https://jolly-naiad-6918b4.netlify.app/"><button type="button" class="btn btn-outline-light">Netlify</button></a>
-              <a href="https://github.com/KeenoFourie/My-Website.git"><button type="button" class="btn btn-outline-light">Github</button></a>
+            <img src="../images/website-2.png" class="d-block w-50 mx-auto h-auto" alt="website-2-project" loading="lazy">
+            <div class="carousel-caption d-md-block">
+              <a href="https://jolly-naiad-6918b4.netlify.app/" target="_blank"><button type="button" class="btn btn-outline-light">Netlify</button></a>
+              <a href="https://github.com/KeenoFourie/My-Website.git" target="_blank"><button type="button" class="btn btn-outline-light">Github</button></a>
             </div>
           </div>
         </div>
@@ -77,15 +84,17 @@
 
     </div>
 
+    <footer class="foot project-foot">
+      <div class="iconic">
+        <a href="https://www.instagram.com/kinzboy10/?hl=en" target="_blank"><img src="../images/instagram.png" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://www.facebook.com/profile.php?id=100085347340027" target="_blank"><img src="../images/facebook.png" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://github.com/KeenoFourie" target="_blank"><img src="../images/github.webp" alt="icons" loading="lazy" class="image-icon"></a>
+      </div>
+      <div class="copyright">
+        <p>COPYRIGHT &COPY; 2023</p>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
-<footer class="foot">
-  <a href="https://www.instagram.com/kinzboy10/?hl=en"><img src="../images/instagram.png" alt="icons" loading="lazy" class="image-icon"></a>
-  <a href="https://www.facebook.com/profile.php?id=100085347340027"><img src="../images/facebook.png" alt="icons" loading="lazy" class="image-icon"></a>
-  <a href="https://github.com/KeenoFourie"><img src="../images/github.webp" alt="icons" loading="lazy" class="image-icon"></a>
-  <div class="copyright">
-    <p>COPYRIGHT &COPY; 2023</p>
-  </div>
-</footer>
-
 </html>
