--- a/html/testimonial.html
+++ b/html/testimonial.html
@@ -93,6 +93,7 @@
         <a href="https://www.instagram.com/kinzboy10/?hl=en" target="_blank"><img src="../images/instagram.png" alt="icons" loading="lazy" class="image-icon"></a>
         <a href="https://www.facebook.com/profile.php?id=100085347340027" target="_blank"><img src="../images/facebook.png" alt="icons" loading="lazy" class="image-icon"></a>
         <a href="https://github.com/KeenoFourie" target="_blank"><img src="../images/github.webp" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://www.linkedin.com/in/keeno-fourie-369062276/" target="_blank"><img src="../images/LinkedIn.png" alt="icons" loading="lazy" class="image-icon"></a>
       </div>
       <div class="copyright">
         <p>COPYRIGHT &COPY; 2023</p>
