--- a/html/about.html
+++ b/html/about.html
@@ -95,8 +95,17 @@
                   </p>
                   <div>
                     <img src="../images/css.png" alt="css" loading="lazy" class="technical-skills">
+                    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                      <div class="progress-bar" style="width: 90%"> CSS: 90%</div>
+                    </div>
                     <img src="../images/html.png" alt="html" loading="lazy" class="technical-skills">
+                    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                      <div class="progress-bar" style="width: 95%">HTML: 95%</div>
+                    </div>
                     <img src="../images/bootstrap.png" alt="boostrap" loading="lazy" class="technical-skills">
+                    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                      <div class="progress-bar" style="width: 75%">BOOTSTRAP: 75%</div>
+                    </div>
                   </div>
                 </div>
               </div>     
