--- a/html/about.html
+++ b/html/about.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <img src="../images/Logo.png" alt="Logo" loading="lazy" class="Logo">
                 <div class="navigation-bar">
-                  <a href="../html/index.html" class="nav-links">HOME</a>
+                  <a href="../index.html" class="nav-links">HOME</a>
                   <a href="../html/about.html"class="nav-links">ABOUT</a>
                   <a href="../html/project.html"class="nav-links">PROJECT</a>
                   <a href="../html/testimonial.html"class="nav-links">TESTIMONIAL</a>
