--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Bootstrap Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,13 +20,13 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <img src="../images/Logo.png" alt="Logo" loading="lazy" class="Logo">
+                <img src="./images/Logo.png" alt="Logo" loading="lazy" class="Logo">
                 <div class="navigation-bar">
-                  <a href="../html/index.html" class="nav-links">HOME</a>
-                  <a href="../html/about.html"class="nav-links">ABOUT</a>
-                  <a href="../html/project.html"class="nav-links">PROJECT</a>
-                  <a href="../html/testimonial.html"class="nav-links">TESTIMONIAL</a>
-                  <a href="../html/contact.html"class="nav-links">CONTACT</a>
+                  <a href="./index.html" class="nav-links">HOME</a>
+                  <a href="./html/about.html"class="nav-links">ABOUT</a>
+                  <a href="./html/project.html"class="nav-links">PROJECT</a>
+                  <a href="./html/testimonial.html"class="nav-links">TESTIMONIAL</a>
+                  <a href="./html/contact.html"class="nav-links">CONTACT</a>
                 </div>
               </div>
               </a>
@@ -39,7 +39,7 @@
             <div style="max-width: 800px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="../images/C12_Keeno_Fourie__1_-removebg-preview.png" alt="profile-pic" loading="lazy">
+                    <img src="./images/C12_Keeno_Fourie__1_-removebg-preview.png" alt="profile-pic" loading="lazy">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body" style="color: black;">
@@ -65,10 +65,10 @@
 
     <footer class="foot project-foot">
       <div class="iconic">
-        <a href="https://www.instagram.com/kinzboy10/?hl=en" target="_blank"><img src="../images/instagram.png" alt="icons" loading="lazy" class="image-icon"></a>
-        <a href="https://www.facebook.com/profile.php?id=100085347340027" target="_blank"><img src="../images/facebook.png" alt="icons" loading="lazy" class="image-icon"></a>
-        <a href="https://github.com/KeenoFourie" target="_blank"><img src="../images/github.webp" alt="icons" loading="lazy" class="image-icon"></a>
-        <a href="https://www.linkedin.com/in/keeno-fourie-369062276/" target="_blank"><img src="../images/LinkedIn.png" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://www.instagram.com/kinzboy10/?hl=en" target="_blank"><img src="./images/instagram.png" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://www.facebook.com/profile.php?id=100085347340027" target="_blank"><img src="./images/facebook.png" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://github.com/KeenoFourie" target="_blank"><img src="./images/github.webp" alt="icons" loading="lazy" class="image-icon"></a>
+        <a href="https://www.linkedin.com/in/keeno-fourie-369062276/" target="_blank"><img src="./images/LinkedIn.png" alt="icons" loading="lazy" class="image-icon"></a>
       </div>
       <div class="copyright">
         <p>COPYRIGHT &COPY; 2023</p>
