--- a/html/about.html
+++ b/html/about.html
@@ -76,7 +76,7 @@
                 <div class="card abo" >
                   <div class="card-body">
                     <p class="card-text">
-                      <h3 class="heading-about-me">PASSION'S</h3>
+                      <h3 class="heading-about-me">PASSIONS</h3>
                     My passion's include most things in the tech industry and any gadgets and electronic advancement's. I have a hobby for sports such as volleyball an basketball aswell as an interest in oudoor activities like hiking. Sketching is one of my favourites along side gaming. I spend lot's of time playing games, especially the latest games and gaming accessories out. 
                     </p>
                   </div>
@@ -87,7 +87,7 @@
               <div class="card abo" >
                 <div class="card-body">
                   <p class="card-text">
-                    <h3 class="heading-about-me">SKILL'S</h3>
+                    <h3 class="heading-about-me">SKILLS</h3>
                     Some of my soft skill's include communication, time management, problem-solving, teamwork skills, and some leadership skills aswell.
                   </p>
                   <p>
