--- a/html/testimonial.html
+++ b/html/testimonial.html
@@ -42,7 +42,7 @@
         <div class="card-testimonials">
           <img src="../images/Seth Kallis.jpg" alt="profile-image-testimonials" loading="lazy" class="selfies">
           <div class="card-body">
-            <h5 class="card-title">Seth Kallis</h5>
+            <h5 class="card-title">Seth Kallis (Lecturer)</h5>
             <p class="card-text">"Keeno is dedicated, hard working and a team player. He works well with his peers and performs well on his projects. He has a good understanding of web development and would be a valuable addition to any team that is lucky enough to have him."
             </p>
           </div>
@@ -51,7 +51,7 @@
         <div class="card-testimonials">
           <img src="../images/Mujahid Fisher.png" alt="profile-image-testimonials" loading="lazy" class="selfies">
           <div class="card-body">
-            <h5 class="card-title">Mujahid Fisher</h5>
+            <h5 class="card-title">Mujahid Fisher (Peer)</h5>
             <p class="card-text">"Keeno is a pupil who works hard. He has a can do attitude and never gives up on a challenge. There is many good attribute that Keeno has and it shows in his everyday life. As a employee he will without a doubt server as an asset."
             </p>
           </div>
@@ -60,7 +60,7 @@
         <div class="card-testimonials">
           <img src="../images/Alonso Cupido.jpg" alt="profile-image-testimonials" loading="lazy" class="selfies">
           <div class="card-body">
-            <h5 class="card-title">Alonso Cupido</h5>
+            <h5 class="card-title">Alonso Cupido (Peer)</h5>
             <p class="card-text">"Keeno is a very great person he works well in a team and also works really hard , and he is always punctual. He has a good understanding of IT and web development, he would be a great asset to your team and a very reliable team member. Any team would be lucky if you were to accept him."
             </p>
           </div>
@@ -71,7 +71,7 @@
           <div class="card-testimonials">
             <img src="../images/Taflynne Summer Petersen.jpg" alt="profile-image-testimonials" loading="lazy" class="selfies">
             <div class="card-body">
-              <h5 class="card-title">Taflynne Summer Petersen</h5>
+              <h5 class="card-title">Taflynne Summer Petersen (Peer)</h5>
               <p class="card-text">"Keeno Fourie is a smart person, who enjoys to code and knows what he is doing. He is able to figure out errors quickly. He is determined to his career in web development, I count as a witness. He understands his work and content well as he is able to explain in a very simplistic way. He is very helpful and guides his peers to the right solution when they need help with their code. Keeno is kind and enjoys to code. He would be an asset to any field and career he works in."
               </p>
             </div>
@@ -80,7 +80,7 @@
           <div class="card-testimonials">
             <img src="../images/Codi Kader.jpg" alt="profile-image-testimonials" loading="lazy" class="selfies">
             <div class="card-body">
-              <h5 class="card-title">Codi Kader</h5>
+              <h5 class="card-title">Codi Kader (Peer)</h5>
               <p class="card-text">"Keeno Fourie, I love that man. He is so down to earth and kind. He can put a smile on anyones face with just a few words. He is really passionate about web development and his craft. Keeno is always willing to help with problems relating to any type of work he can help with. He is definitely a great addition to any team or company. He works really well in a team and can bring a team alive and help them in any way possible. However, if needed he works really well alone as well."
               </p>
             </div>
